fix gg date + uneven game logos

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -123,6 +123,10 @@ p
 
 .game-logo
   padding: 20px
+  max-height: 200px
+
+  @media (min-width: 992px) and (max-width: 1199px)
+    max-height: 180px
 
 .red-emphasis
   color: $red-text
